--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -1,3 +1,18 @@
 spring:
   application:
     name: config-server
+  cloud:
+    config:
+      server:
+        git:
+          uri: https://github.com/DogacUlgacc/smart-order-turkcell-microservice
+
+          default-label: main
+
+          search-paths:
+            - config-server
+            - configurations/
+            - configurations/{application}
+
+server:
+  port: 8787
