--- a/configurations/product-service/application-dev.yml
+++ b/configurations/product-service/application-dev.yml
@@ -4,6 +4,18 @@ eureka:
       defaultZone: http://localhost:8761/eureka
 
 spring:
+  kafka:
+    bootstrap-servers: localhost:9092
+  cloud:
+    stream:
+      kafka:
+        binder:
+          brokers: localhost:9094
+      bindings:
+        orderCreated-in-0:
+          destination: order-topic
+          group: product_service
+
   datasource:
     url: jdbc:postgresql://localhost:5432/product_service
     driver-class-name: org.postgresql.Driver
